[project]
name = "1688-crawler-image-search-products"
version = "0.1.0"
description = "以图搜货 - 支持1688、淘宝、义乌购等平台"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.0",
    "playwright>=1.40.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "openpyxl>=3.1.0",
    "aiosmtplib>=3.0.0",
]

[tool.poetry]
name = "1688_crawler-image_search_products"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib", "config"]
